--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9"
   }
 }
